--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,17 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+
+body {
+
+  font-family: "Open Sans", sans-serif;
+
+}
+
+
+a {
+  text-decoration: none;
+  color: #5b6987ff;
+  font-weight: 600;
+}
