--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,36 @@
 
 }
 
+a {
+    text-decoration: none;
+    color: #5b6987ff;
+    font-weight: 600;
+}
+
 .logo {
     width: 70px;
 }
 
 /* Main */
 
+main {
+
+    flex-grow: 1;
+
+}
+
+
 img {
     width: 35px;
 }
 
 /* Footer */
+
+ul {
+    list-style: none;
+}
+
+.footer-top {
+    background-image: url(footer-bg.jpg);
+    min-height: 500px;
+}
