--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,45 @@ a {
     width: 70px;
 }
 
+
 /* Main */
 
-main {
 
-    flex-grow: 1;
+.jumbo {
+    background-image: url(../jumbotron.jpg);
+    height: 380px;
+    background-size: cover;
+    background-position: center top;
+    background-repeat: no-repeat;
+}
+
+
+.hero-section {
+    position: relative;
+
+
+}
+
+.hero-section a {
+    position: absolute;
+    top: -20px;
+    left: 10%;
+    padding: 0.5rem 2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    z-index: 10;
+
+}
+
+
+.card-img-top {
+    height: 175px;
+
+
+}
+
+.card img {
+    width: 100%;
 
 }
 
@@ -28,6 +62,13 @@ main {
 img {
     width: 35px;
 }
+
+
+.card-top {
+    width: 100%;
+}
+
+
 
 /* Footer */
 
